@@ -1,3 +1,8 @@
+Mon Oct  7 10:18:42 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * connectors/dds4ccm/DDS4CCM-INSTALL.html:
+          Use perl explicitly when using mwc.pl on Windows
+
 Mon Oct  7 10:16:28 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * connectors/dds4ccm/DDS4CCM-INSTALL.html:
